# ddex-suite

./: .gitignore  CHANGELOG.md  CHANGELOG_v030.md  CLAUDE.md  Cargo.toml  README.md  SECURITY.md  SECURITY_CERTIFICATION_v0.3.5.md  TEST_SUMMARY_v0.3.5.md  WASM_DIAGNOSTIC_v0.3.5.md  WASM_SUCCESS_SUMMARY_v0.3.5.md  audit_report.json  blueprint.md  builder_errors.txt  claude_code_phase_3_3_spec.md  comprehensive_test.py  deny.toml  full_test_results.txt  json  karma.conf.js  package-lock.json  package.json  parser_errors.txt  performance_test_results.txt  release_commands.sh  security_report.txt  security_test_results.txt  test.xml  test_functionality.py  test_migration.py  test_report.txt  test_results.txt  toml  yaml
benchmark-suite/: PERFORMANCE_SUMMARY.md  generate_comprehensive_report.py  generate_test_data.py  memory_streaming_test.py
benchmark-suite/rust/: Cargo.toml  benchmark.rs  simple_benchmark.rs
docs/: API_DOCUMENTATION.md  DB-C14N-SPEC.md  MIGRATION-GUIDE.md  PERFORMANCE-TUNING-GUIDE.md  PRESETS_ARCHITECTURE.md  PRESET_MIGRATION.md  QUICK_START.md  WASM_API.md  developer-guide.md  integration_test_extensions.md  python_builder_api.txt  python_parser_api.txt  security-audit.md  user-guide.md
examples/: browser-streaming.html
examples/perfect-fidelity/: Cargo.toml  README.md  canonicalization_example.rs  extension_handling_example.rs  large_file_streaming_example.rs  round_trip_example.rs
scripts/: add-missing-arms.sh  build-all.sh  build-node-macos.sh  build-node.sh  build-python.sh  check-parser-size.sh  clean-parser.sh  complete-ffi-fix.sh  final-npm-check.sh  (+44 more)
(+168 files in other folders)
