[package]
name = "perfect-fidelity-examples"
version = "0.2.5"
edition = "2021"
description = "Perfect Fidelity Engine examples for the DDEX Suite"
authors = ["DDEX Suite Team"]
license = "MIT"

[[example]]
name = "round_trip_example"
path = "round_trip_example.rs"

[[example]]
name = "canonicalization_example"
path = "canonicalization_example.rs"

[[example]]
name = "extension_handling_example"
path = "extension_handling_example.rs"

[[example]]
name = "large_file_streaming_example"
path = "large_file_streaming_example.rs"

[dependencies]
ddex-builder = { path = "../../packages/ddex-builder" }
ddex-core = { path = "../../packages/core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
quick-xml = "0.31"
regex = "1.5"
tokio = { version = "1.0", features = ["full"] }

[dev-dependencies]
insta = "1.34"
criterion = "0.5"

[[bench]]
name = "fidelity_benchmark"
harness = false

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
opt-level = 0
debug = true